--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <title>Ionic App</title>
 
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet">
+
     <base href="/" />
 
     <meta name="color-scheme" content="light dark" />
